--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,644 @@
-/*fonts*/
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+/* Import Font from GOOGLE  */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-body{font-family: 'Poppins', sans-serif;
- 
+/* --------------------------------
+ Reset Default Margin Padding 
+-------------------------------- */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
-h2{
-    color:3A3A3A;
-    font-size: 24px;
-    padding-left: 70px;
-    padding-top: 50px;
+
+
+/* -----------------------
+ Global Style Value 
+-----------------------  */
+:root {
+
+    /* Global Color  */
+    --primary-color: #DD0000;
+    --item-bg-color: #161616;
+    --color-white: #FFFFFF;
+    --color-black: #000000;
+
+    /* Global Typography */
+    --body-font: 'Poppins', sans-serif;
+
+    /* Global Common Style  */
+    --item-border: 1px solid #E8E8E8;
 }
+
+body {
+    font-family: var(--body-font);
+}
+
+
+
+/* --------------------------------
+     Common/Utility Style   
+-------------------------------- */
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.half-width {
+    width: 50%;
+}
+
+a {
+    text-decoration: none;
+}
+
+.button {
+    display: inline-block;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: var(--color-white);
+    border: 2px solid var(--primary-color);
+    padding: 16px 25px;
+
+    background-color: var(--primary-color);
+    border-radius: 5px;
+
+    transition: all ease-in 300ms;
+}
+
+.button .fa-solid {
+    margin-left: 10px;
+}
+
+.button:hover {
+    background-color: var(--color-white);
+    color: var(--primary-color);
+}
+
+#view-all-btn {
+    display: none;
+}
+
+
+
+/* Main Body Style  Start */
+main {
+    padding: 2% 5%;
+}
+
+
+
+
+/* ----------------------------
+ Hero Section Style Start
+---------------------------- */
+.banner {
+    background-color: var(--item-bg-color);
+    border-radius: 30px;
+    padding: 2% 7% 0px;
+}
+
+.half-width {
+    padding: 0px;
+    margin: 0;
+}
+
+.half-width h1 {
+    font-weight: 700;
+    font-size: 70px;
+    line-height: 80px;
+    color: var(--color-white);
+}
+
+.half-width p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    margin: 20px 0px 30px;
+    color: var(--color-white);
+}
+
+.half-width img {
+    width: 90%;
+    margin: 0 0 -7px 8%;
+}
+
+/* ----------------------------
+ Hero Section Style End
+---------------------------- */
+
+
+
+/* ---------------------------------
+Body Item Container Style Start
+--------------------------------- */
+.side-container {
+    display: grid;
+
+    /*  ****** Flexible Sidebar ******
+    grid-template-columns: 3fr 9fr; 
+*/
+
+    grid-template-columns: 320px 1fr;
+    gap: 24px;
+    margin: 70px 0;
+}
+
+
+.side-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 35px;
+    background-color: var(--item-bg-color);
+    border-radius: 10px;
+    row-gap: 30px;
+
+    position: sticky;
+    top: 70px;
+}
+
+.side-menu-item {
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    color: var(--item-bg-color);
+    padding: 17px 35px;
+
+    background-color: var(--color-white);
+    border: 2px solid var(--color-white);
+    border-radius: 10px;
+    transition: all ease-in 250ms;
+}
+
+.side-menu-item:hover {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+    color: var(--color-white);
+}
+
+#active {
+    background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    color: var(--color-white);
+}
+
+#active:hover {
+    background-color: var(--color-white);
+    border-color: var(--color-white);
+    color: var(--primary-color);
+}
+
+.container2 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
+}
+
+
+/* News Item Style  */
+.game {
+    border: 1px solid #E8E8E8;
+    border-radius: 10px;
+    transition: box-shadow ease-in-out 250ms;
+}
+
+.game:hover {
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.15);
+}
+
+
+.thumbnail img {
+    width: 100%;
+}
+
+.game-detail {
+    padding: 20px;
+}
+
+.game2-category {
+    font-weight: 500;
+    font-size: 16px;
+    padding: 5px 15px;
+    border: 1px solid var(--item-bg-color);
+    border-radius: 5px;
+    text-align: center;
+}
+
+.game2-title {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 27px;
+    margin: 15px 0 20px;
+}
+
+.game2-info {
+    display: flex;
+    column-gap: 30px;
+    align-items: center;
+}
+
+.meta-icon {
+    margin-right: 10px;
+    color: rgba(22, 22, 22, 0.8);
+    ;
+}
+
+.meta-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: rgba(22, 22, 22, 0.7);
+    ;
+}
+
+
+
+
+
+/* Match Fixing Schedule Style  */
+.match-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #E8E8E8;
+    border-radius: 10px;
+    padding: 50px 30px;
+    text-align: center;
+    transition: box-shadow ease-in-out 250ms;
+}
+
+.match-item:hover {
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.15);
+}
+
+.match-thumbnail {
+    display: grid;
+    grid-template-columns: 4fr 3fr 4fr;
+    justify-content: center;
+    align-items: center;
+}
+
+.match-thumbnail img {
+    width: 100%;
+    border: 1px solid #E8E8E8;
+}
+
+
+.match-thumbnail h3 {
+    font-weight: 700;
+    font-size: 16px;
+    color: var(--item-bg-color);
+}
+
+
+
+.match-item-detail {
+    padding: 0 20px;
+}
+
+
+.match-title {
+    font-weight: 600;
+    font-size: 20px;
+    margin: 20px 0 10px;
+}
+
+
+
+.match-meta-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: #4D4D4D;
+}
+
+/* Footer Style Start  */
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 40px;
+    background-color: var(--item-bg-color);
+    padding: 120px 5%;
+}
+
+.footer-text {
+    color: var(--color-white);
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 60px;
+}
+
+.margin {
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(90deg, rgba(192, 204, 218, 0.1) 0%, rgba(192, 204, 218, 0.6) 50.38%, rgba(192, 204, 218, 0.1) 100%);
+}
+
+.footer-menu-items {
+    display: flex;
+    column-gap: 40px;
+    align-items: center;
+}
+
+.footer-menu-items .menu-item {
+    list-style-type: none;
+}
+
+.footer-menu-items .menu-item a {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    color: #B9B9B9;
+
+}
+
+.footer-menu-items .menu-item a:hover {
+    color: var(--color-white);
+
+}
+
+.icons .fa-brands {
+    color: var(--color-white);
+    font-size: 18px;
+    margin: 0 8px;
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 10px;
+    border-radius: 100%;
+}
+
+.icons .fa-brands:hover {
+    background-color: var(--color-white);
+    color: var(--primary-color);
+    transition: all ease-in 200ms;
+}
+/* Footer Style End  */
+
+
+ /* Responsive Style For Mobile Device */
+
+@media only screen and (max-width: 576px) {
+
+    /* Common Style  */
+    .container {
+        flex-direction: column;
+        text-align: center;
+    }
+    .half-width {
+        width: 100%;
+    }
+    .button {
+        padding: 8px 20px;
+    }
+
+    /* Hero Section Style */
+    .banner {
+        padding: 40px 38px 0px;
+    }
+    .half-width h1 {
+        font-size: 2em;
+        line-height: 33px;
+    }
+    .half-width p {
+        font-size: 14px;
+        line-height: 24px;
+        margin: 8px 0px 16px;
+    }
+    .half-width img {
+        margin: 25px 0 0 0;
+    }
+    #single-player {
+        margin-bottom: -7px;
+    }
+
+    /* Body  */
+    .side-container {
+        grid-template-columns: 1fr;
+        margin: 0;
+    }
+    .container2 {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 24px;
+    }
+    .side-menu {
+        background-color: var(--color-white);
+        border-radius: none;
+        row-gap: 30px;
+        position: static;
+    }
+    .side-menu-item {
+        width: auto;
+        font-size: 18px;
+        padding: 12px 45px;
+        border: 2px solid #E8E8E8;
+    }
+    .side-menu-item:hover {
+        background-color: var(--primary-color);
+        border-color: var(--primary-color);
+        color: var(--color-white);
+    }
+
+    #active {
+        padding: 12px 45px;
+    }
+    #active:hover {
+        border-color: var(--primary-color);
+    }
+
+    /* Footer  */
+    footer {
+        margin-top: 50px;
+    }
+    .footer-menu-items {
+        flex-direction: column;
+        row-gap: 25px;
+    }
+}
+
+
+
+
+
+/* ------------------------------------------------
+ Responsive Style For Landscape Mobile Device
+------------------------------------------------ */
+@media only screen and (min-width: 576.1px) and (max-width: 767px) {
+
+    /* Common Style  */
+    .button {
+        padding: 8px 20px;
+    }
+
+    /* Hero Section Style */
+    .half-width h1 {
+        font-size: 1.8em;
+        line-height: 33px;
+    }
+    .half-width p {
+        font-size: 14px;
+        line-height: 24px;
+        margin: 8px 0px 14px;
+    }
+
+    /* Body  */
+    .side-container {
+        grid-template-columns: 1fr;
+        margin: 0;
+        row-gap: 0;
+    }
+    .container2 {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .side-menu {
+        background-color: var(--color-white);
+        position: static;
+        padding: 50px 0px 30px 0px;
+    }
+    .side-menu-item {
+        width: 100%;
+        font-size: 18px;
+        padding: 12px 45px;
+        border: 2px solid #E8E8E8;
+    }
+    .side-menu-item:hover {
+        background-color: var(--primary-color);
+        border-color: var(--primary-color);
+        color: var(--color-white);
+    }
+
+    #active {
+        padding: 12px 60px;
+    }
+    #active:hover {
+        border-color: var(--primary-color);
+    }
+
+    /* Footer  */
+    footer {
+        margin-top: 50px;
+    }
+    .footer-menu-items {
+        flex-wrap: wrap;
+        align-items: center;
+        row-gap: 25px;
+        justify-content: center;
+    }
+}
+
+
+
+
+
+
+ /* Responsive Style For Tablet Device */
+
+@media only screen and (min-width: 767.1px) and (max-width: 991px) {
+
+    /* Common Style  */
+    .button {
+        padding: 8px 20px;
+    }
+
+    #view-all-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 50px 0;
+    }
+
+    /* Hero Section Style */
+    .half-width h1 {
+        font-size: 2.5em;
+        line-height: 45px;
+    }
+    .half-width p {
+        font-size: 14px;
+        line-height: 24px;
+        margin: 8px 0px 14px;
+    }
+
+    /* Body  */
+    .wraper-container {
+        grid-template-columns: 1fr;
+        margin: 0;
+        row-gap: 0;
+    }
+    .news-item-box {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .side-menu {
+        flex-direction: row;
+        background-color: var(--color-white);
+        position: static;
+        column-gap: 22px;
+        padding: 50px 0px 30px 0px;
+    }
+    .side-menu-item {
+        width: auto;
+        font-size: 18px;
+        border: 2px solid #E8E8E8;
+    }
+    .side-menu-item:hover {
+        background-color: var(--primary-color);
+        border-color: var(--primary-color);
+        color: var(--color-white);
+    }
+
+    #active {
+        padding: 17px 60px;
+    }
+    #active:hover {
+        border-color: var(--primary-color);
+    }
+
+    /* Footer  */
+    .footer-menu-items {
+        flex-wrap: wrap;
+        align-items: center;
+        row-gap: 25px;
+        justify-content: center;
+    }
+}
+
+ /* Responsive Style For Laptop Device */
+
+@media only screen and (min-width: 991.1px) and (max-width: 1200px) {
+
+    /* Hero Section Style */
+    .half-width h1 {
+        font-size: 2.5em;
+        line-height: 50px;
+    }
+
+    /* Body  */
+    .news-item-box {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+/* ---------------------------------------------
+ Responsive Style For Large Laptop Device
+--------------------------------------------- */
+@media only screen and (min-width: 1201px) and (max-width: 1450px) {
+
+    /* Hero Section Style */
+    .half-width h1 {
+        font-size: 3.5em;
+        line-height: 70px;
+    }
+
+
+    /* Body  */
+    .news-item-box {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
